force-app/main/default/objects/Policy_Draft__c/Policy_Draft__c.object-meta.xml
<CustomObject>
    <label>Policy Draft</label>
    <nameField>
        <label>Policy Draft Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Drafts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>