force-app/main/default/objects/Policy_Draft__c/fields/Additional_Email_for_Notifications_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email_for_Notifications_1__c</fullName>
    <formula>Producer__r.Agency__r.Additional_Email_for_Notifications_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Email for Notifications</label>
    <type>Text</type>
</CustomField>