force-app/main/default/objects/Policy_Draft__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <formula>Producer__r.Agency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency</label>
    <type>Text</type>
</CustomField>