force-app/main/default/objects/Policy_Draft__c/fields/AgencyLookupF__c.field-meta.xml
<CustomField>
    <fullName>AgencyLookupF__c</fullName>
    <formula>Producer__r.Agency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency</label>
    <type>Text</type>
</CustomField>