force-app/main/default/objects/Policy_Draft__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <formula>IF(
    AND(ISBLANK(Lead__c), ISBLANK(Opportunity__c)), 
    NULL, 
    IF(
        AND(NOT(ISBLANK(Lead__c)), NOT(ISBLANK(Opportunity__c))), 
        Opportunity__r.Account.Name, 
        IF(
            NOT(ISBLANK(Lead__c)), 
             Lead__r.Company, 
            Opportunity__r.Account.Name
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>