force-app/main/default/objects/Policy_Draft__c/fields/DOT__c.field-meta.xml
<CustomField>
    <fullName>DOT__c</fullName>
    <formula>IF(
NOT(ISBLANK(Opportunity__c)),
Opportunity__r.USDOT__c,
Lead__r.USDOT__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOT</label>
    <type>Text</type>
</CustomField>