force-app/main/default/objects/Policy_Draft__c/fields/DOT_Owner__c.field-meta.xml
<CustomField>
    <fullName>DOT_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>DOT Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Policy Drafts (DOT Owner)</relationshipLabel>
    <relationshipName>Policy_Drafts1</relationshipName>
    <type>Lookup</type>
</CustomField>