force-app/main/default/objects/Policy_Draft__c/fields/Estimated_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Sale_Price__c</fullName>
    <label>Estimated Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>