force-app/main/default/objects/Policy_Draft__c/fields/Financing__c.field-meta.xml
<CustomField>
    <fullName>Financing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financing</label>
    <referenceTo>Financing__c</referenceTo>
    <relationshipLabel>Policy Drafts</relationshipLabel>
    <relationshipName>Policy_Drafts</relationshipName>
    <type>Lookup</type>
</CustomField>