force-app/main/default/objects/Policy_Draft__c/fields/IRM_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>IRM_Agent_Email__c</fullName>
    <defaultValue>&quot;IRM@vantageins.us&quot;</defaultValue>
    <label>IRM Agent Email</label>
    <type>Email</type>
</CustomField>