force-app/main/default/objects/Policy_Draft__c/fields/IRM_Agent_Email_F__c.field-meta.xml
<CustomField>
    <fullName>IRM_Agent_Email_F__c</fullName>
    <formula>Producer__r.Agency__r.IRM_Agent__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IRM Agent Email</label>
    <type>Text</type>
</CustomField>