force-app/main/default/objects/Policy_Draft__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Policy Drafts</relationshipLabel>
    <relationshipName>Policy_Drafts</relationshipName>
    <type>Lookup</type>
</CustomField>