force-app/main/default/objects/Policy_Draft__c/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documentation Not Submitted</fullName>
            </value>
            <value>
                <fullName>Lead Not Engaged</fullName>
            </value>
            <value>
                <fullName>IRM lacked engagement</fullName>
            </value>
            <value>
                <fullName>Outbid by competitor</fullName>
            </value>
            <value>
                <fullName>Unresponsive client</fullName>
            </value>
            <value>
                <fullName>Closed business</fullName>
            </value>
            <value>
                <fullName>No Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>