force-app/main/default/objects/Policy_Draft__c/fields/Loss_to__c.field-meta.xml
<CustomField>
    <fullName>Loss_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lost to</label>
    <referenceTo>Insurance_Company__c</referenceTo>
    <relationshipLabel>Policy Drafts</relationshipLabel>
    <relationshipName>Policy_Drafts</relationshipName>
    <type>Lookup</type>
</CustomField>