force-app/main/default/objects/Policy_Draft__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field only when you are working on a Opportunity</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Policy Drafts</relationshipLabel>
    <relationshipName>Policy_Drafts</relationshipName>
    <type>Lookup</type>
</CustomField>