force-app/main/default/objects/Policy_Draft__c/fields/Policy_eff_date__c.field-meta.xml
<CustomField>
    <fullName>Policy_eff_date__c</fullName>
    <label>Policy eff date</label>
    <type>Date</type>
</CustomField>