force-app/main/default/objects/Policy_Draft__c/fields/Power_Units__c.field-meta.xml
<CustomField>
    <fullName>Power_Units__c</fullName>
    <label>Power Units</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>