force-app/main/default/objects/Policy_Draft__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Policy Drafts</relationshipLabel>
    <relationshipName>Policy_Drafts</relationshipName>
    <type>Lookup</type>
</CustomField>