force-app/main/default/objects/Policy_Draft__c/fields/Producer_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Producer_Contact_ID__c</fullName>
    <formula>Producer__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producer Contact ID</label>
    <type>Text</type>
</CustomField>