force-app/main/default/objects/Policy_Draft__c/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agency Renewal</label>
    <type>Checkbox</type>
</CustomField>