force-app/main/default/objects/Policy_Draft__c/fields/Sales_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Sales_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Policy Drafts (Sales Supervisor)</relationshipLabel>
    <relationshipName>Supervisor_Policy_Drafts</relationshipName>
    <type>Lookup</type>
</CustomField>