force-app/main/default/objects/Policy_Draft__c/fields/Sales_Supervisor_F__c.field-meta.xml
<CustomField>
    <fullName>Sales_Supervisor_F__c</fullName>
    <formula>Producer__r.Agency__r.Sales_Supervisor__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Supervisor</label>
    <type>Text</type>
</CustomField>