force-app/main/default/objects/Policy_Draft__c/fields/Sub_Online__c.field-meta.xml
<CustomField>
    <fullName>Sub_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sub Online</label>
    <type>Checkbox</type>
</CustomField>