force-app/main/default/objects/Policy_Draft__c/fields/Support_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Support_Agent_Email__c</fullName>
    <defaultValue>&quot;support@vantageins.us&quot;</defaultValue>
    <label>Support Agent Email</label>
    <type>Email</type>
</CustomField>