force-app/main/default/objects/Policy_Draft__c/fields/Support_Agent_Email_F__c.field-meta.xml
<CustomField>
    <fullName>Support_Agent_Email_F__c</fullName>
    <formula>Producer__r.Agency__r.Support_Agent__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Agent Email</label>
    <type>Text</type>
</CustomField>