force-app/main/default/objects/Policy_Draft__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Company_Name__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Producer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>